--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,9 +1,14 @@
 .auth-page {
-  width: 40vh;
+  width: 380px;
   display: flex;
   flex-direction: column;
 
-  .title {
+  &.title {
     margin: 10px 0;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
   }
 }
